[package]
name = "mmapi"
version = "0.1.0"
authors = ["jorian <jorian@outlook.com>"]
edition = "2018"
exclude = [
    "main.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.*"
serde_json = "1.0.*"
serde = "1.0.102"
serde_derive = "1.0.102"